samples/_failures_safe/1761211631_637ce1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a740f0bb.c: In function ‘main’:
./samples/SAFE/__tmp_a740f0bb.c:148:9: error: expected expression at end of input
  148 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_a740f0bb.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a740f0bb.c:148:9: error: expected declaration or statement at end of input
